# agents_tutorials

agno_tests/: context_compression.py  context_engineer.py  debug_context.py  debug_context_nohist.py  debug_context_simple.py  debug_context_stateless.py  persist_preferences.py  persist_preferences_memory.py  pyproject.toml  structured_output.py
agno_tests/context/ctx_engine/: context_engineer_2.md  context_engineer_2.py  context_enginer_2.py
agno_tests/workflow/: content_workflow.py
googleadk_agent/: .env
googleadk_tests/: context_compression.py  debug_context.py  debug_context_comparison.py  debug_context_nohist.py  debug_context_persistent.py  debug_context_simple.py  debug_context_stateless.py  gemini_basic_agent.py  persist_preferences.py  persistent_session.py  pyproject.toml  runner.py  session_data.db
openclaw/: pyproject.toml
openclaw/bot1/: .gitignore  README.md  SOUL.md  main.py
openclaw/bot1/.claude/docs/: requirements.md
openclaw/bot1/docs/superpowers/specs/: 2026-03-13-skills-system-design.md  2026-03-16-sub-agents-design.md
openclaw/bot1/tests/: test_main.py
openclaw/bot1/workspace/: SOUL.md  exec-approvals.json
openclaw/bot2/: CLAUDE.md  agents.py  constants.py  llm_config.py  main.py  prompt.py  skills.py  tools.py
openclaw/bot2/tests/: test_agents.py  test_memory_db.py  test_prompt.py  test_storage.py  test_tools.py
openclaw/bot2/workspace/: exec-approvals.json
openclaw/docs/superpowers/plans/: 2026-03-16-agno-bot2-migration.md
openclaw/docs/superpowers/specs/: 2026-03-16-agno-bot2-design.md
pydanticai_agent/: .env
(+2 files in other folders)
